apps/prod/sap-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sofi
  namespace: sofi
spec:
  ingressClassName: traefik
  rules:
    - host: sofi-platform.dk
      http:
        paths:
          - backend:
              service:
                name: sap-web
                port:
                  number: 3333
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sofi-platform.dk
      secretName: sofi-platform.dk-tls
